Added new BidResponse class as a DTO to get around serialisation issues. Implemented rendering of bids on client side as well as viewing of developer's profile that made the bid.